# SuperGraph

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.py  build.sh
include/: cmaths.h  renderer.h  scene.h  typedef.h
src/: README.md  cmaths.c  main.c  renderer.c  scene.c
src/gfx/: README.md  camera.c  camera.h  color.h  gfx.h  light.c  light.h  prim.c  prim.h  rays.c  rays.h  renderer.h  scene.c  scene.h  typedef.h
src/gfx/math/: cmaths.c  cmaths.h
src/gfx/utils/: utils.h
